# qux360

./: .gitignore  CACHING.md  CONTRIBUTING.md  LICENSE  README.md  VALIDATORS.md  pyproject.toml  requirements.txt
docs/: Qux360_final.html  index.html
docs/Qux360_final.fld/: filelist.xml
docs/bulma/: tabs.js
docs/static/css/: index.css
examples/: config.json  interview_basics.py  interview_suggest_themes.py  interview_suggest_topics.py  loading_interview.py  study_basics.py  study_suggest_themes.py  study_suggest_themes_from_cache.py
examples/data/: interview_A.csv  interview_A.docx  interview_A.xlsx  interview_B.csv  interview_B.docx  interview_B.xlsx  interview_C.csv  interview_C.docx  interview_C.xlsx
examples/notebooks/: anonymize.ipynb
src/pyqual/core/: __init__.py  cache.py  iffy.py  interview.py  models.py  study.py  utils.py  validated.py
src/pyqual/io/: csv_parser.py  docx_parser.py  utils.py  xlsx_parser.py
src/qux360/core/: __init__.py  cache.py  iffy.py  interview.py  models.py  qindex.py  study.py  utils.py  validated.py  validators.py
src/qux360/io/: csv_parser.py  docx_parser.py  utils.py  xlsx_parser.py
tests/: test_cache.py  test_interview.py
