[project]
name = "pyqual"
version = "0.1.0"
description = "AI-assisted qualitative analysis library for interview data with privacy-preserving features"
authors = [
    {name = "Werner Geyer", email = "werner.geyer@us.ibm.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2,<2.3.0",
    "openpyxl>=3.1.5,<4.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "webvtt-py>=0.5.1,<0.6.0",
    "mellea==0.1.3",
    "ibm-watsonx-ai<=1.3.38",
    "spacy>=3.8.7,<4.0.0",
    "xlsxwriter>=3.2.9,<4.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "litellm>=1.77.5,<2.0.0",
    "pydantic>=2.11.9,<3.0.0",
]

[tool.poetry]
packages = [
    { include = "pyqual", from = "src" }
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
