[project]
name = "qux360"
version = "0.0.1"
description = "AI-assisted qualitative analysis library for interview data with privacy-preserving features"
authors = [
    {name = "Werner Geyer", email = "werner.geyer@us.ibm.com"},
    {name = "Siya Kunde", email = "skunde@ibm.com"},
    {name = "Mariela Lanza", email = "mlanza@ar.ibm.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas",
    "openpyxl",
    "python-docx",
    "webvtt-py",
    "mellea==0.1.3",
    "ibm-watsonx-ai<=1.3.38",
    "spacy",
    "xlsxwriter",
    "python-dotenv",
    "litellm",
    "pydantic",
]

[tool.poetry]
packages = [
    { include = "qux360", from = "src" }
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "ipykernel (>=7.1.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
